--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 
     {{content-for 'head'}}
 
-    <link href='https://fonts.googleapis.com/css?family=Quattrocento' rel='stylesheet' type='text/css'>  
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>  
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/msgboard.css">
 
